luci-theme: fix some dynamic layout issues
Implement a dynamic menu item width to allow item unwrapped and visible:
'min-width: max-content;' or 'max-width: max-content;'

Remove IE hacks and fix a console error for -webkit-scrollbar-thumb

(cherry picked from commit 91572540595dae9ea88ae5e38ce01847cb4c08e0)

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -1130,8 +1130,7 @@ a.menu:after {
 	top: 40px;
 	left: -9999px;
 	z-index: 900;
-	min-width: 160px;
-	max-width: 220px;
+	min-width: max-content;
 	margin-left: 0;
 	margin-right: 0;
 	padding: 6px 0;
