--- a/themes/luci-theme-openwrt-2020/htdocs/luci-static/openwrt2020/cascade.css
+++ b/themes/luci-theme-openwrt-2020/htdocs/luci-static/openwrt2020/cascade.css
@@ -156,8 +156,8 @@ abbr[title], acronym[title] {
 }
 
 #mainmenu {
-	flex: 1 1 100px;
-	max-width: 250px;
+/*	flex: 1 1 100px;*/
+	max-width: max-content;
 	background: var(--main-dark-color);
 	color: var(--main-bright-color);
 	padding: 1em;
